# gmail-utils

./: .gitignore  README.md  pyproject.toml
gmail_utils/: __init__.py  gmail_parser.py
