[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gmail-utils"
version = "0.1.0"
description = "Internal Gmail parsing utilities"
requires-python = ">=3.10"
dependencies = [
  "google-auth",
  "google-auth-oauthlib",
  "google-api-python-client",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["gmail_utils*"]
